tests/valid/conditional_statement/if_nested_4.rs
/*
return: 4
*/

main(): i32 {
    a: i64 = 0;
    if (1)
        if (0)
            a = 3;
        else
            a = 4;

    return a;
}