tests/invalid/global_variables/use_before_declaration.rs
/*
fail: 1
*/

main(): i32 {
    return foo;
}

foo: i64 = 3;